--- a/sw_types.html
+++ b/sw_types.html
@@ -5,7 +5,17 @@
 	<script>
 
 		function draw(data) {
-			d3.select("body").append("svg").attr("width", 50).attr("height", 50).append("circle").attr("cx", 25).attr("cy", 25).attr("r", 25).style("fill", "purple");
+			d3.select("body")
+				.data(data)
+				.enter()
+				.append("svg")
+					.attr("width", d.count)
+					.attr("height", d.count)
+					.append("circle")
+					.attr("cx", 25)
+					.attr("cy", 25)
+					.attr("r", 25)
+					.style("fill", "purple");
 		}
 
 	</script>
