--- a/sw_types.html
+++ b/sw_types.html
@@ -9,8 +9,8 @@
 				.data(data)
 				.enter()
 				.append("svg")
-					.attr("width", d.count)
-					.attr("height", d.count)
+					.attr("width", function(d) { return d.count} )
+					.attr("height", function(d) { return d.count} )
 					.append("circle")
 					.attr("cx", 25)
 					.attr("cy", 25)
