--- a/sw_types.html
+++ b/sw_types.html
@@ -14,7 +14,7 @@
 					.append("circle")
 					.attr("cx", 25)
 					.attr("cy", 25)
-					.attr("r", 25)
+					.attr("r", function(d) { return d.count})
 					.style("fill", "purple");
 		}
 
