--- a/bilevel.html
+++ b/bilevel.html
@@ -43,8 +43,8 @@ var arc = d3.svg.arc()
     .innerRadius(function(d) { return radius / 3 * d.depth; })
     .outerRadius(function(d) { return radius / 3 * (d.depth + 1) - 1; });
 
-// d3.json("http://scholarworks.calstate.edu/dashboard/getStatData.php?facet=subject_keyword", function(error, root) {
-	d3.json("flare2.json", function(error, root) {
+d3.json("http://scholarworks.calstate.edu/dashboard/getStatData.php?facet=subject_keyword", function(error, root) {
+	// d3.json("flare2.json", function(error, root) {
 
   // Compute the initial layout on the entire tree to sum sizes.
   // Also compute the full name and fill color for each node,
