Adding information div.

--- a/bilevel.html
+++ b/bilevel.html
@@ -172,3 +172,5 @@ function updateArc(d) {
 d3.select(self.frameElement).style("height", margin.top + margin.bottom + "px");
 
 </script>
+
+<div id="subject_content" style="float: left; width: 50%; border: solid 1px black;">&nbsp;</div>
