--- a/bilevel.html
+++ b/bilevel.html
@@ -15,6 +15,7 @@ circle {
 </style>
 <body>
 <script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 <script>
 
 var margin = {top: 350, right: 480, bottom: 350, left: 480},
@@ -81,7 +82,8 @@ d3.json("http://scholarworks.calstate.edu/dashboard/getStatData.php?facet=subjec
 
   function zoomIn(p) {
 	  
-	alert(p.name);
+	// alert(p.name);
+	$( "#subject_content" ).text( p.name );
     if (p.depth > 1) p = p.parent;
     if (!p.children) return;
     zoom(p, p);
@@ -173,4 +175,4 @@ d3.select(self.frameElement).style("height", margin.top + margin.bottom + "px");
 
 </script>
 
-<div id="subject_content" style="float: left; width: 50%; border: solid 1px black;">&nbsp;</div>
+<div id="subject_content" style="float: right; width: 30%; border: solid 1px black;">&nbsp;</div>
