--- a/bilevel.html
+++ b/bilevel.html
@@ -82,7 +82,7 @@ d3.json("http://scholarworks.calstate.edu/dashboard/getStatData.php?facet=subjec
       .on("click", zoomIn)
   .on("mouseover", function(d) {
 	  // alert("Mouse Over");
-	  $("#subject_content").text("Subject: " + d.name);
+	  $("#subject_content".text("Subject: " + d.name);
 	});
 
   function zoomIn(p) {
