adding stats.html

--- a/bilevel.html
+++ b/bilevel.html
@@ -282,4 +282,4 @@ d3.select(self.frameElement).style("height", margin.top + margin.bottom + "px");
 
 </script>
 
-<div id="subject_content" style="float: right; width: 30%; border: solid 1px black;">&nbsp;</div>
+<div id="subject_content" style="width: 30%; border: solid 1px black;">&nbsp;</div>
