--- a/stats.html
+++ b/stats.html
@@ -36,7 +36,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Scholarworks Dashboard</a>
+          <a class="navbar-brand" href="#">Scholarworks Analytics Dashboard</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
