--- a/stats.html
+++ b/stats.html
@@ -27,7 +27,7 @@
     <!-- ///////////////////////////////////////////////// -->
     <!-- D3 Visualization Library -->
     <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
-    <script type="text/javascript" src="https://raw.githubusercontent.com/benkeen/d3pie/0.1.3/d3pie/d3pie.min.js"></script>
+    <script type="text/javascript" src="js/d3pie.min.js"></script>
     <!--  USING D3 -->
     <script>
 
