--- a/stats.html
+++ b/stats.html
@@ -324,6 +324,7 @@ var pie = new d3pie("pieChart", {
 	}
 });
 </script>
+<div id="pieChart"></div>
                   </td>
                 </tr>
               </tbody>
