--- a/reports.html
+++ b/reports.html
@@ -22,7 +22,7 @@
     $.getJSON('http://scholarworks.calstate.edu/portal/api/handle/stats/1234/24234', function(data) {
     	
     	// alert(data);
-    	
+    	$('#total_views]').text(data.total_count);
     });
     </script>
   </head>
@@ -89,7 +89,7 @@
             <table class="table table-striped">
               <thead>
                 <tr>
-                  <th>Total Stats</th>
+                  <th colspan="2">Total Stats</th>
                 </tr>
               </thead>
               <tbody>
@@ -97,8 +97,7 @@
                   <td>
                   	Total Views:
                   </td>
-                  <td>
-                  	0
+                  <td id="total_views">
                   </td>
                 </tr>
               </tbody>
