--- a/reports.html
+++ b/reports.html
@@ -25,12 +25,12 @@
 
     	$('#total_views').text(data.total_count);
     	
-    	$.each(data.months, function(k, v) { {
+    	$.each(data.months, function(k, v)  {
     		$('<tr></tr>')
     			.html('<td>'+k+'</td><td>'+v+'</td>')
     			.appendTo('#system_stats')
     			.trigger('create');
-    	}
+    	)};
     });
     </script>
   </head>
