--- a/reports.html
+++ b/reports.html
@@ -32,7 +32,7 @@
     	});
     	
     	$('<tr></tr>')
-			.html('<td>Total Views</td><td>'+data.total_count+'</td>')
+			.html('<td><strong>Total Views</strong></td><td><strong>'+data.total_count+'</strong></td>')
     		.appendTo('#system_stats')
     		.trigger('create');
 
