--- a/reports.html
+++ b/reports.html
@@ -26,7 +26,7 @@
     	
     	$.each(data.months, function(k, v)  {
     		$('<tr></tr>')
-    			.html('<td>'+k+'</td><td>'+v+'</td>')
+    			.html('<td>'+k+'</td><td>'+v.views+'</td><td>'+v.searches+'</td><td>'+v.search_results+'</td>')
     			.appendTo('#system_stats')
     			.trigger('create');
     	});
@@ -102,7 +102,10 @@
             <table class="table table-striped"  id="system_stats">
               <thead>
                 <tr>
-                  <th colspan="2">Total Stats</th>
+                  <th colspan="2">Month</th>
+                  <th colspan="2">Total Item Views</th>
+                  <th colspan="2">Searches</th>
+                  <th colspan="2">Search Result Clicks</th>
                 </tr>
               </thead>
               <tbody>
