--- a/reports.html
+++ b/reports.html
@@ -102,10 +102,10 @@
             <table class="table table-striped"  id="system_stats">
               <thead>
                 <tr>
-                  <th colspan="2">Month</th>
-                  <th colspan="2">Total Item Views</th>
-                  <th colspan="2">Searches</th>
-                  <th colspan="2">Search Result Clicks</th>
+                  <th>Month</th>
+                  <th>Total Item Views</th>
+                  <th>Searches</th>
+                  <th>Search Result Clicks</th>
                 </tr>
               </thead>
               <tbody>
