--- a/reports.html
+++ b/reports.html
@@ -41,7 +41,7 @@
     $.getJSON('campus_list.json', function(data){
     	$.each(data, function(i, item){
         	$('<tr></tr>')
-			.html('<td><strong>'+data.campus[i].label+'</strong></td>')
+			.html('<td><strong>'+item.label+'</strong></td>')
     		.appendTo('#campus_stats')
     		.trigger('create');
     		
