--- a/reports.html
+++ b/reports.html
@@ -40,11 +40,12 @@
     
     $.getJSON('campus_list.json', function(data){
     	$.each(data.campus, function(i, item){
-        	$('<tr></tr>')
-			.html('<td><strong>'+item.label+'</strong></td>')
-    		.appendTo('#campus_stats')
-    		.trigger('create');
-    		
+        	$.getJSON('http://scholarworks.calstate.edu/portal/api/handle/stats/owningComm/'+item.id, function(data2) {
+	        	$('<tr></tr>')
+					.html('<td><strong>'+item.label+'</strong></td><td>'+data2.total_count+'</td><td>'+data2.view_count+'</td><td>'+data2.search_count+'</td><td>'+data2.searchResult_count+'</td>')
+    				.appendTo('#campus_stats')
+    				.trigger('create');
+        	});
     	});
     });
     </script>
