--- a/reports.html
+++ b/reports.html
@@ -41,6 +41,7 @@
     $.getJSON('campus_list.json', function(data){
     	$.each(data.campus, function(i, item){
         	$.getJSON('http://scholarworks.calstate.edu/portal/api/handle/stats/owningComm/'+item.id, function(data2) {
+        		data2 = $.parseJSON(data2);
 	        	$('<tr></tr>')
 					.html('<td><strong>'+item.label+'</strong></td><td>'+data2.total_count+'</td><td>'+data2.view_count+'</td><td>'+data2.search_count+'</td><td>'+data2.searchResult_count+'</td>')
     				.appendTo('#campus_stats')
@@ -131,14 +132,14 @@
             <table class="table table-striped" id="campus_stats">
               <thead>
                 <tr>
-                  <th>Community Views</th>
+                  <th>Campus</th>
+                  <th>Total Views</th>
+                  <th>Total Item Views</th>
+                  <th>Searches</th>
+                  <th>Search Result Clicks</th>
                 </tr>
               </thead>
               <tbody>
-                <tr>
-                  <td>
-                  </td>
-                </tr>
               </tbody>
             </table>
           </div>
