--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Dashboard</a></li>
+            <!--  <li><a href="#">Dashboard</a></li>
             <li><a href="#">Settings</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Help/Wiki</a></li>
+            <li><a href="#">Profile</a></li> -->
+            <li><a href="http://library.calstate.edu/scholarworks/ScholarWorks">Help/Wiki</a></li>
           </ul>
-          <form class="navbar-form navbar-right">
+          <!--  <form class="navbar-form navbar-right">
             <input type="text" class="form-control" placeholder="Search...">
-          </form>
+          </form> -->
         </div>
       </div>
     </div>
