--- a/reports.html
+++ b/reports.html
@@ -43,7 +43,7 @@
         	$.getJSON('http://scholarworks.calstate.edu/portal/api/handle/stats/owningComm/'+item.id, function(data2) {
         		data2 = $.parseJSON(data2);
 	        	$('<tr></tr>')
-					.html('<td><strong><a href="campusReports.html?id='+item.id+'&campus='+item.label+'">'+item.label+'</a></strong></td><td>'+data2.total_count+'</td><td>'+data2.view_count+'</td><td>'+data2.searchResult_count+'</td>')
+					.html('<td><strong><a href="campusReports.html?id='+item.id+'&campus='+item.label+'">'+item.label+'</a></strong></td><td>'+data2.total_count+'</td><td>'+data2.view_count+'</td><td>'+data2.searchResult_count+'</td><td>'+data2.bitstream_views+'</td>')
     				.appendTo('#campus_stats')
     				.trigger('create');
         	});
@@ -114,6 +114,7 @@
                   <th>Total Views</th>
                   <th>Total Item Views</th>
                   <th>Searches</th>
+                  <th>Bitstream Views</th>
                 </tr>
               </thead>
               <tbody>
