--- a/campusReports.html
+++ b/campusReports.html
@@ -58,7 +58,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="/">Scholarworks Dashboard</a>
+          <a class="navbar-brand" href="/dashboard">Scholarworks Dashboard</a>
         </div>
         <div class="navbar-collapse collapse">
         </div>
@@ -69,7 +69,7 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li><a href="/">Home</a></li>
+            <li><a href="/dashboard">Home</a></li>
             <li class="active"><a href="reports.html">Reports</a></li>
             <li><a href="stats.html">Analytics</a></li>
           </ul>
