--- a/reports.html
+++ b/reports.html
@@ -63,7 +63,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Scholarworks Dashboard</a>
+          <a class="navbar-brand" href="/dashboard">Scholarworks Dashboard</a>
         </div>
         <div class="navbar-collapse collapse">
         </div>
@@ -74,7 +74,7 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li><a href="/">Home</a></li>
+            <li><a href="/dashboard">Home</a></li>
             <li class="active"><a href="reports.html">Reports</a></li>
             <li><a href="stats.html">Analytics</a></li>
           </ul>
