--- a/stats.html
+++ b/stats.html
@@ -121,6 +121,28 @@
 <div id="pieChart"></div>
 
 <script>
+
+var pieChartData = {};
+pieChartData["header"] = {
+		"title": {
+			"text": "Lots of Programming Languages",
+			"fontSize": 24,
+			"font": "open sans"
+		},
+		"subtitle": {
+			"text": "A full pie chart to show off label collision detection and resolution.",
+			"color": "#999999",
+			"fontSize": 12,
+			"font": "open sans"
+		},
+		"titleSubtitlePadding": 9
+	};
+	
+$.getJSON('http://scholarworks.calstate.edu/portal/api/facet/json/type_keyword', function(data){
+	$.each(data.campus, function(i, item){
+	});
+});
+	
 var pie = new d3pie("pieChart", {
 	"header": {
 		"title": {
