--- a/stats.html
+++ b/stats.html
@@ -138,6 +138,8 @@ pieChartData["header"] = {
 		"titleSubtitlePadding": 9
 	};
 	
+console.log(pieChartData);
+
 $.getJSON('http://scholarworks.calstate.edu/portal/api/facet/json/type_keyword', function(data){
 	$.each(data.campus, function(i, item){
 	});
