--- a/stats.html
+++ b/stats.html
@@ -24,6 +24,8 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     
+    <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+    
     <!-- ///////////////////////////////////////////////// -->
     <!-- D3 Visualization Library -->
     <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
