--- a/stats.html
+++ b/stats.html
@@ -151,7 +151,7 @@ pieChartData["size"] = {
 pieChartData["data"] = {
 		"sortOrder": "value-desc"
 };
-pieChartData["data"]["content"] = {{
+pieChartData["data"]["content"] = [{
 		"label": "JavaScript",
 		"value": 264131,
 		"color": "#2484c1"
@@ -290,7 +290,7 @@ pieChartData["data"]["content"] = {{
 		"label": "FoxPro",
 		"value": 32170,
 		"color": "#248838"
-	}};
+	}];
 pieChartData["labels"] = {
 		"outer": {
 			"pieDistance": 32
