--- a/stats.html
+++ b/stats.html
@@ -330,8 +330,10 @@ pieChartData["misc"] = 	{
 	
 console.log(pieChartData);
 
-$.getJSON('http://scholarworks.calstate.edu/portal/api/facet/json/type_keyword', function(data){
-	$.each(data.campus, function(i, item){
+$.getJSON('http://scholarworks.calstate.edu/portal/api/facet/json/type_keyword', function(data) {
+	data = $.parseJSON(data);
+	$.each(data, function(i, item){
+		alert(i + " = " + item);
 	});
 });
 	
