--- a/stats.html
+++ b/stats.html
@@ -334,7 +334,7 @@ $.getJSON('http://scholarworks.calstate.edu/portal/api/facet/json/type_keyword',
 	data = $.parseJSON(data);
 	$.each(data, function(i, item){
 		// alert(i + " = " + item.name + ": " + item.size);
-		pieChartData["data"]["content"].push([{"label": item.name, "value": item.size, "color": "#e4a14b"}]);
+		pieChartData["data"]["content"].push({"label": item.name, "value": item.size, "color": "#e4a14b"});
 	});
 });
 	
