--- a/stats.html
+++ b/stats.html
@@ -207,7 +207,7 @@ function loadPieChart(pieChartDataIn) {
 }
 
 function pieChartClicked(data) {
-	alert(data.label);
+	console.log(data);
 }
 
 </script>
