--- a/stats.html
+++ b/stats.html
@@ -208,6 +208,7 @@ function loadPieChart(pieChartDataIn) {
 
 function pieChartClicked(data) {
 	console.log(data);
+	alert(data[label]);
 }
 
 </script>
