--- a/stats.html
+++ b/stats.html
@@ -208,7 +208,7 @@ function loadPieChart(pieChartDataIn) {
 
 function pieChartClicked(data) {
 	console.log(data);
-	alert(data[label]);
+	alert(data["label"]);
 }
 
 </script>
