--- a/stats.html
+++ b/stats.html
@@ -189,7 +189,7 @@ pieChartData["misc"] = 	{
 		}
 	};
 pieChartData["callbacks"] = {
-		onClickSegment: pieChartClicked
+		onClickSegment: function(info) {alert(info);}
 	};	
 console.log(pieChartData);
 
