--- a/stats.html
+++ b/stats.html
@@ -189,7 +189,7 @@ pieChartData["misc"] = 	{
 		}
 	};
 pieChartData["callbacks"] = {
-		onClickSegment: function(info) {console.log(info);}
+		onClickSegment: function(info) {console.log(info.data.label);}
 	};	
 console.log(pieChartData);
 
