--- a/stats.html
+++ b/stats.html
@@ -146,7 +146,8 @@ pieChartData["footer"] = {
 		"location": "bottom-left"
 	};
 pieChartData["size"] = {
-		"canvasWidth": 800
+		"canvasWidth": 900,
+		"canvasHeight": 900
 };
 pieChartData["data"] = {
 		"sortOrder": "value-desc"
