--- a/stats.html
+++ b/stats.html
@@ -113,15 +113,15 @@
             <table class="table table-striped">
               <thead>
                 <tr>
-                  <th>Community Views</th>
+                  <th>Statisitics Visualization on Facet: Type</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
-                  <td>
+                  <td><center>
 
 <div id="pieChart"></div>
-
+</center>
 <script>
 
 var pieChartData = {};
