--- a/stats.html
+++ b/stats.html
@@ -189,6 +189,10 @@ pieChartData["misc"] = 	{
 			"percentage": 100
 		}
 	};
+pieChartData["smallSegmentGrouping"enabled] = {
+		"enabled": true,
+		"value": 20
+};
 pieChartData["callbacks"] = {
 		onClickSegment: function(info) {console.log(info.data.label);}
 	};	
