--- a/stats.html
+++ b/stats.html
@@ -189,7 +189,7 @@ pieChartData["misc"] = 	{
 			"percentage": 100
 		}
 	};
-pieChartData["smallSegmentGrouping"enabled] = {
+pieChartData["smallSegmentGrouping"] = {
 		"enabled": true,
 		"value": 20
 };
