--- a/stats.html
+++ b/stats.html
@@ -191,7 +191,10 @@ pieChartData["misc"] = 	{
 	};
 pieChartData["smallSegmentGrouping"] = {
 		"enabled": true,
-		"value": 20
+		"value": 20,
+		"valueType": value,
+		"label":  "< 20 items",
+		"color": "#aaa"
 };
 pieChartData["callbacks"] = {
 		onClickSegment: function(info) {console.log(info.data.label);}
