--- a/stats.html
+++ b/stats.html
@@ -192,7 +192,7 @@ pieChartData["misc"] = 	{
 pieChartData["smallSegmentGrouping"] = {
 		"enabled": true,
 		"value": 20,
-		"valueType": value,
+		"valueType": "value",
 		"label":  "< 20 items",
 		"color": "#aaa"
 };
