--- a/stats.html
+++ b/stats.html
@@ -191,8 +191,8 @@ pieChartData["misc"] = 	{
 	};
 pieChartData["smallSegmentGrouping"] = {
 		"enabled": true,
-		"value": 20,
-		"valueType": "value",
+		"value": "10%"",
+		"valueType": "percentage",
 		"label":  "< 20 items",
 		"color": "#aaa"
 };
