--- a/stats.html
+++ b/stats.html
@@ -191,7 +191,7 @@ pieChartData["misc"] = 	{
 	};
 pieChartData["smallSegmentGrouping"] = {
 		"enabled": true,
-		"value": "10%"",
+		"value": "10%",
 		"valueType": "percentage",
 		"label":  "< 20 items",
 		"color": "#aaa"
