--- a/stats.html
+++ b/stats.html
@@ -152,7 +152,7 @@ pieChartData["size"] = {
 pieChartData["data"] = {
 		"sortOrder": "value-desc"
 };
-pieChartData["data"]["smallSegmentGrouping"]: {
+pieChartData["data"]["smallSegmentGrouping"] = {
 	enabled: true,
 	value: 5,
 	valueType: "percentage",
