--- a/stats.html
+++ b/stats.html
@@ -197,7 +197,7 @@ pieChartData["misc"] = 	{
 	};
 pieChartData["callbacks"] = {
 		onClickSegment: function(info) {console.log(info.data.label);}
-		onMouseOverSegment: function(info) {
+		onMouseoverSegment: function(info) {
 			$("#hoverInfo").text(info.data.label);
 		}
 	};	
