--- a/stats.html
+++ b/stats.html
@@ -196,7 +196,7 @@ pieChartData["misc"] = 	{
 		}
 	};
 pieChartData["callbacks"] = {
-		onClickSegment: function(info) {console.log(info.data.label);}
+		onClickSegment: function(info) {console.log(info.data.label);},
 		onMouseoverSegment: function(info) {
 			$("#hoverInfo").text(info.data.label);
 		}
