--- a/stats.html
+++ b/stats.html
@@ -114,6 +114,7 @@
               <thead>
                 <tr>
                   <th>Statisitics Visualization on Facet: Type</th>
+                  <th>&nbsp;</th>
                 </tr>
               </thead>
               <tbody>
