--- a/stats.html
+++ b/stats.html
@@ -119,10 +119,10 @@
               </thead>
               <tbody>
                 <tr>
-                  <td><center>
+                  <td style="width: 65%; align: center;">
 
 <div id="pieChart"></div>
-</center>
+
 <script>
 
 var pieChartData = {};
