--- a/stats.html
+++ b/stats.html
@@ -217,6 +217,7 @@ $.getJSON('http://scholarworks.calstate.edu/portal/api/facet/json/type_keyword',
 
 $.getJSON('http://scholarworks.calstate.edu/portal/api/facet/json/subject_keyword', function(data) {
 	data = $.parseJSON(data);
+	pieChartData["data"]["content"] = [];
 	$.each(data, function(i, item){
 		// alert(i + " = " + item.name + ": " + item.size);
 		pieChartData["data"]["content"].push({"label": item.name, "value": item.size, "color": "#e4a14b"});
