--- a/stats.html
+++ b/stats.html
@@ -190,7 +190,7 @@ $.getJSON('http://scholarworks.calstate.edu/portal/api/facet/json/type_keyword',
 var pieChartData2 = {};
 pieChartData2["header"] = {
 		"title": {
-			"text": "ScholarWorks Facet Counts for Subject",
+			"text": "ScholarWorks Facet Counts for Program",
 			"fontSize": 24,
 			"font": "open sans"
 		},
